<resources>
    <string name="app_name">玩转宜昌</string>
    <string name="label_home_search">快速搜索</string>
    <string name="label_home">首页</string>
    <string name="label_recommend">热门推荐</string>
    <string name="label_home_play">玩在宜昌</string>
    <string name="label_home_eat">吃在宜昌</string>
    <string name="label_home_stay">住在宜昌</string>
    <string name="label_home_pay">购物中心</string>
    <string name="label_home_fun">娱乐天地</string>
    <string name="label_home_traffic">交通信息</string>
    <string name="label_home_setting">设置</string>
    <string name="label_home_return">返回</string>
    <string name="label_home_sort">排序</string>
    <string name="label_play">播放</string>
    <string name="label_like">点赞</string>
    <string name="label_home_recommend">推荐</string>
    <string name="label_traffic">路线</string>
    <string name="label_comment">综合评分：</string>
    <string name="label_expend_all">展开</string>
    <string name="label_home_return_top">回到顶部</string>

    <string name="keycode_space">62</string> <!-- 空格 -->
    <string name="keycode_center">66</string> <!-- 回车 -->
    <string name="keycode_back">4</string> <!-- 返回 -->
    <string name="keycode_left">21</string> <!-- 左边 -->
    <string name="keycode_right">22</string> <!-- 右边 -->
    <string name="keycode_del">67</string>
    <string name="hint_search_by_py">请输入拼音缩写</string>
    <string name="label_empty">目前暂无更多数据...</string>
    <string name="label_search_empty">快去输入搜索信息吧！</string>
    <string name="label_recommend_today">今日推荐</string>
    <string name="label_hot_recommend">本周热门</string>
    <string name="label_result_data">筛选结果</string>
    <string name="tab_search">快速搜索</string>
    <string name="button_clear">清除</string>
    <string name="cache_temp">[{\"address\":\"湖北省宜昌市夷陵区三斗坪石牌村。\",\"child\":[59,60,61],\"file_f\":\"/wzyc/upload/news/video/2017/11/14/20171114150615_93.mp4\",\"id\":3,\"id_core\":\"002\",\"img_f\":\"/wzyc/upload/news/img/2017/11/13/20171113120056_2.jpg\",\"introduce\":\"三峡人家以其“一肩挑两坝，一江携两溪”的独特地理位置优势，融合地质文化、巴文化、楚文化等，成为长江三峡黄金旅游线上的一颗璀璨明珠，走进三峡 人家您将经受一次烟雨迷蒙的文化梦幻洗礼。\",\"like_count\":0,\"open_time_end\":\"17:00:00\",\"open_time_start\":\"08:00:00\",\"other\":\"\",\"parent_id\":\"\",\"price\":241.0,\"recommend\":5.0,\"recommend_index\":0,\"tel_num\":\"\",\"title\":\"三峡人家（5A）\",\"type_str\":\"play\",\"video_path\":\"\"},{\"address\":\"湖北省宜昌市龙舟坪镇晒谷坪村隔河岩旅游专用码头。\",\"child\":[62,63,64],\"id\":4,\"id_core\":\"003\",\"img_f\":\"/wzyc/upload/news/img/2017/11/13/20171113120107_80.jpg\",\"introduce\":\"清江画廊是一个美丽的地方，一江清流泽山川，温润的气候滋养生灵，茂密的草木悄然生长，绿了山峦，丰腴了山峦，也秀丽了山峦。蓝天白云之下，错落有致的山峦之间，一道碧绿的清江，远远地从天上蜿蜒而来。\",\"like_count\":0,\"open_time_end\":\"17:00:00\",\"open_time_start\":\"08:00:00\",\"other\":\"\",\"parent_id\":\"\",\"price\":209.0,\"recommend\":4.5,\"recommend_index\":0,\"tel_num\":\"\",\"title\":\"清江画廊（5 A）\",\"type_str\":\"play\",\"video_path\":\"\"},{\"address\":\"湖北省宜昌市夷陵区三斗坪镇三峡坝区。\",\"child\":[65,66,67],\"id\":5,\"id_core\":\"004\",\"img_f\":\"/wzyc/upload/news/img/2017/11/03/20171103183730_77.jpg\",\"introduce\":\"坛子岭景区因其顶端观景台形似一个倒扣的坛子而得名，该景区为大坝建设勘测点，海拔262.48米，是观赏三峡工程全景的最佳位置，不仅能欣赏到三峡大坝的雄浑壮伟，还能观看壁立千仞的“长江第四峡”双向五级船闸。\",\"like_count\":0,\"open_time_end\":\"17:30:00\",\"open_time_start\":\"08:00:00\",\"other\":\"\",\"parent_id\":\"\",\"price\":160.0,\"recommend\":4.0,\"recommend_index\":0,\"tel_num\":\"\",\"title\":\"坛子岭风景区（4 A）\",\"type_str\":\"play\",\"video_path\":\"\"},{\"address\":\"湖北省宜昌市黄花乡新坪村。\",\"child\":[68,69,70],\"id\":6,\"id_core\":\"005\",\"img_f\":\"/wzyc/upload/news/img/2017/11/03/20171103183912_67.jpg\",\"introduce\":\"三峡大瀑布位于长江三峡国家地质公园，集迷人风光、民俗文化、水上娱乐、旅行探险等多种休闲功能于一体的神奇峡谷。游客逆水而行，山不同，水各异，色彩缤纷，美景处处，神话传说百听不厌，让人应接不暇。\",\"like_count\":0,\"open_time_end\":\"17:30:00\",\"open_time_start\":\"08:30:00\",\"other\":\"\",\"parent_id\":\"\",\"price\":111.0,\"recommend\":5.0,\"recommend_index\":0,\"tel_num\":\"\",\"title\":\"三峡大瀑布（4A）\",\"type_str\":\"play\",\"video_path\":\"\"},{\"address\":\"湖北省宜昌市兴山县高岚村1组。\",\"child\":[71,72,73],\"id\":7,\"id_core\":\"006\",\"img_f\":\"/wzyc/upload/news/img/2017/11/03/20171103184056_23.jpg\",\"introduce\":\"朝天吼漂流景区是“一江两山”黄金旅游通道的重要结点，景区全长6.5公里，落差148米，群山连绵，叠嶂层峦；滩险流急，起伏跌宕，是集特种旅游、文化旅游、自然观光旅游于一体的大型综合性景区。\",\"like_count\":0,\"open_time_end\":\"17:00:00\",\"open_time_start\":\"08:30:00\",\"other\":\"\",\"parent_id\":\"\",\"price\":192.0,\"recommend\":5.0,\"recommend_index\":0,\"tel_num\":\"\",\"title\":\"朝天吼漂流（4A）\",\"type_str\":\"play\",\"video_path\":\"\"},{\"address\":\"湖北省宜昌市秭归县平湖大道。\",\"child\":[74,75,115],\"id\":8,\"id_core\":\"007\",\"img_f\":\"/wzyc/upload/news/img/2017/11/03/20171103184218_79.jpg\",\"introduce\":\"屈原故里景区以激扬屈原文化、追溯峡江楚韵为主题，把丰富的历史文化、民俗文化与屈原文化资源结合起来，培育和发展出具有巴风楚韵的戏曲、表演和饮食，拓展和发掘出具有浓郁地方特色的祭祀和旅游服务项目。\",\"like_count\":0,\"open_time_end\":\"17:00:00\",\"open_time_start\":\"08:00:00\",\"other\":\"\",\"parent_id\":\"\",\"price\":75.0,\"recommend\":4.0,\"recommend_index\":0,\"tel_num\":\"\",\"title\":\"屈原故里（5A）\",\"type_str\":\"play\",\"video_path\":\"\"},{\"address\":\"湖北省宜昌市夷陵区分乡镇百里荒生态旅游区。\",\"child\":[76,77,78],\"id\":9,\"id_core\":\"008\",\"img_f\":\"/wzyc/upload/news/img/2017/11/03/20171103184344_2.jpg\",\"introduce\":\"百里荒以“草原风光、天然荒凉”为特色，有滑翔、滑草、草地滚木球、跑马场、蒙古包、射箭狩猎、影视基地等项目。百里荒志在建成集草场风光、游牧休闲、康体娱乐于一体的独具特色的生态草场旅游风景区。\",\"like_count\":0,\"open_time_end\":\"17:00:00\",\"open_time_start\":\"08:30:00\",\"other\":\"\",\"parent_id\":\"\",\"price\":118.0,\"recommend\":4.0,\"recommend_index\":0,\"tel_num\":\"\",\"title\":\"百里荒生态旅游区（4A）\",\"type_str\":\"play\",\"video_path\":\"\"},{\"address\":\"湖北省宜昌市西陵区宜巴公路南津关9号峡口风景区内。\",\"child\":[79,80,81],\"id\":10,\"id_core\":\"009\",\"img_f\":\"/wzyc/upload/news/img/2017/11/03/20171103184456_67.jpg\",\"introduce\":\"西陵峡快乐谷景区主要由游览观光、极限运动、住宿休闲、拓展训练和大型山水实景表演《梦·三峡》几部分组成，其主要景点有龙泉山，龙泉洞，下牢溪，腾龙塔，吊脚楼，吊桥，姻缘池，母乳泉等等。\",\"like_count\":0,\"open_time_end\":\"17:30:00\",\"open_time_start\":\"08:30:00\",\"other\":\"\",\"parent_id\":\"\",\"price\":183.0,\"recommend\":4.0,\"recommend_index\":0,\"tel_num\":\"\",\"title\":\"西陵峡快乐谷（4A）\",\"type_str\":\"play\",\"video_path\":\"\"}]</string>
</resources>
