<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_home_bg"
    android:orientation="vertical"
    tools:context="com.wisesoft.traveltv.ui.stay.StayActivity">

    <include
        style="@style/head_style"
        layout="@layout/layout_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/content_padding"
        android:layout_marginRight="@dimen/content_padding"
        android:orientation="horizontal">

        <!--筛选栏-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.wisesoft.traveltv.ui.view.TVIconView
                android:id="@+id/m_eat_tiv"
                style="@style/m_home_radio_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="0"
                app:gIcon="@mipmap/ic_home_stay"
                app:gLight="true"
                android:padding="4dp"
                app:gText="@string/label_home_stay"
                app:gTextSite="bottom" />

            <com.wisesoft.traveltv.ui.view.TVIconView
                android:id="@+id/m_search_tiv"
                style="@style/m_home_radio_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="0"
                app:gIcon="@mipmap/ic_home_search"
                app:gLight="true"
                app:gText="@string/label_home_search"
                android:padding="4dp"
                app:gTextSite="bottom" />

            <com.wisesoft.traveltv.ui.view.TVIconView
                android:id="@+id/m_recomend_tiv"
                style="@style/m_home_radio_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_margin="8dp"
                android:layout_weight="0"
                app:gIcon="@mipmap/ic_home_recommend"
                app:gLight="true"
                app:gText="@string/label_home_recommend"
                app:gTextSite="bottom" />

            <com.wisesoft.traveltv.ui.view.TVIconView
                android:id="@+id/m_return_top_tiv"
                style="@style/m_home_radio_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:layout_weight="0"
                android:visibility="gone"
                app:gIcon="@mipmap/ic_home_return_top"
                app:gLight="true"
                app:gText="@string/label_home_return_top"
                app:gTextSite="bottom" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.wisesoft.traveltv.ui.view.weight.pop.TVFilterView
                android:id="@+id/m_filter_tfv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical" />

            <com.wisesoft.traveltv.ui.view.TVScrollView
                android:id="@+id/m_content_sv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--头部推荐信息-->
                    <include
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:orientation="horizontal"
                        android:padding="8dp"
                        layout="@layout/layout_recommend_head"/>

                    <com.owen.tvrecyclerview.widget.TvRecyclerView
                        android:id="@+id/m_content_trv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="true"
                        android:padding="15dp"
                        app:tv_isMenu="true"
                        app:tv_selectedItemIsCentered="true" />
                </LinearLayout>
            </com.wisesoft.traveltv.ui.view.TVScrollView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
